# Sluice

./: .gitignore  Architecture.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  active_torrents.json  pyproject.toml  todo.md
.agents/workflows/: base.md
engine/: __init__.py  app_data.py  bandwidth.py  config.py  controller.py  events.py  exceptions.py  logger.py  main.py  metrics.py  models.py  peers.py  scheduler.py  torrent.py  utils.py
engine/api/: models.py  server.py
engine/tuning/: __init__.py  apply.py  evaluator.py
frontend/: .gitignore  package.json  pnpm-lock.yaml
frontend/src/: App.tsx  index.css
frontend/src-tauri/: .gitignore  tauri.conf.json
frontend/src/components/debug/: DebugPanel.css  DebugPanel.tsx
frontend/src/components/layout/: StatsBar.tsx  TopBar.tsx
frontend/src/components/torrent/: AddTorrentModal.tsx  FileBrowserModal.tsx  TorrentDetail.tsx  TorrentTable.tsx
frontend/src/services/: api.ts
frontend/src/store/: useTorrentStore.ts
frontend/src/types/: api.ts
frontend/src/utils/: format.ts
tests/: __init__.py  conftest.py
tests/integration/: test_engine_integration.py
tests/unit/: test_bandwidth.py  test_controller.py  test_main.py  test_peers.py  test_scheduler.py  test_torrent.py
